--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-   <p>Radio check. Pilot, please confirm.</p>
-   <p>Hello control, my child will not stop interupting me. Please forgive me. </p>
+   <p>Control: Radio check. Pilot, please confirm.</p>
+   <p>Pilot: Hello control, my child will not stop interupting me. Please forgive me. </p>
+   <p>Control: How old is your kiddo?  He sounds like he is having a lot of fun getting the bad guys!</p>
 </body>
 </html>
