--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
    <p>Control: Radio check. Pilot, please confirm.</p>
    <p>Pilot: Hello control, my child will not stop interupting me. Please forgive me. </p>
    <p>Control: How old is your kiddo?  He sounds like he is having a lot of fun getting the bad guys!</p>
+   <p>He is almost 7! My little ninja!</p>
 </body>
 </html>
