--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <p>Control: Radio check. Pilot, please confirm.</p>
    <p>Pilot: Hello control, my child will not stop interupting me. Please forgive me. </p>
    <p>Control: How old is your kiddo?  He sounds like he is having a lot of fun getting the bad guys!</p>
-   <p>He is almost 7! My little ninja!</p>
+   <p>Pilot: He is almost 7! My little ninja!</p>
+   <p>Control: Now that we have shown that we can communicate, it is time for takeoff. Are all the lights on the control panel red or green?</p>
 </body>
 </html>
