--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
    <p>Pilot: Hello control, my child will not stop interupting me. Please forgive me. </p>
    <p>Control: How old is your kiddo?  He sounds like he is having a lot of fun getting the bad guys!</p>
    <p>Pilot: He is almost 7! My little ninja!</p>
-   <p>Control: Now that we have shown that we can communicate, it is time for takeoff. Are all the lights on the control panel red or green?</p>
+   <p>Control: Great!  He can help our mission with stealth and flying under the radar!</p>
 </body>
 </html>
