--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
    <p>Control: How old is your kiddo?  He sounds like he is having a lot of fun getting the bad guys!</p>
    <p>Pilot: He is almost 7! My little ninja!</p>
    <p>Control: Great!  He can help our mission with stealth and flying under the radar!</p>
+   <p>Pilot: He is excited to work on this mission and would like to know his instructins
+
+   </p>
 </body>
 </html>
