6th communication fix

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+   <head>
+      <link rel="stylesheet" type="text/css" href="style.css">
+   </head>
 <body>
    <p>Control: Radio check. Pilot, please confirm.</p>
    <p>Pilot: Hello control, my child will not stop interupting me. Please forgive me. </p>
